--- a/static/css/round8.css
+++ b/static/css/round8.css
@@ -1,106 +1,73 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700;900&display=swap");
 body {
-  margin: 0;
-}
-
-.key8-img {
-  text-align: center;
-  z-index: -99;
-}
-
-.key8-img img {
-  width: 89%;
-}
-
-.key-answers {
-  text-align: center;
-  margin-top: -13em;
-  margin-left: 1.65em;
-  word-spacing: .55em;
-  margin-bottom: 5em;
-}
-
-.key-answers input {
-  width: 7px;
-  text-align: center;
-  font-size: small;
-  border-radius: .5em;
-  padding: .2em;
-}
-
-#r1 {
-  background-color: red;
-}
-
-#r2 {
-  background-color: green;
-}
-
-#r3 {
-  background-color: red;
-}
-
-#r4 {
-  background-color: yellow;
-}
-
-#r5 {
-  background-color: blue;
-}
-
-#r6 {
-  background-color: whitesmoke;
-}
-
-button {
-  font-size: xx-large;
-  color: black;
-  margin-top: -3em;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100vh;
+  background: black;
   font-family: Cinzel;
-  border-radius: .5em;
+}
+
+.wdiv {
+  text-align: center;
+  margin-top: -5em;
+}
+
+.watch {
+  width: 70%;
+}
+
+.mp3 audio {
+  background-color: #000;
+}
+
+.ans {
+  text-align: center;
+  margin-top: -7em;
+  margin-left: 2em;
+}
+
+.ans input[name="answer"] {
+  padding-right: 4em;
+  padding-top: .5em;
+  font-size: large;
   border: 3px solid #535353;
 }
 
-button:hover {
+.ans input[type="submit"] {
+  font-family: Cinzel;
+  color: black;
+  margin-top: 1em;
+  border: 3px solid #535353;
+  font-size: large;
+}
+
+.ans input[type="submit"]:hover {
   background-color: #535353;
   color: white;
 }
 
-.enter {
-  text-align: center;
-  padding-bottom: 1em;
-}
-
 .next-clue {
-  margin-top: -30em;
   text-align: center;
   word-spacing: 2em;
 }
 
 .next-clue a {
   text-decoration: none;
-  border: 2px solid black;
-  color: black;
+  border: 2px solid whitesmoke;
+  color: whitesmoke;
   padding: .2em;
   border-radius: .6em;
 }
 
 .next-clue a:hover {
-  background-color: black;
-  color: whitesmoke;
-}
-
-#homepage {
+  background-color: whitesmoke;
   color: black;
-  margin-top: 3em;
-  text-decoration: none;
-  font-family: Cinzel;
-  border-radius: .5em;
-  border: 3px solid #535353;
-}
-
-#homepage:hover {
-  background-color: #535353;
-  color: white;
 }
 
 .modal {
@@ -185,4 +152,4 @@ button:hover {
   font-weight: bold;
   text-decoration: none;
 }
-/*# sourceMappingURL=round8.css.map */
+/*# sourceMappingURL=round2.css.map */
