--- a/templates/round2.html
+++ b/templates/round2.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Key 2</title>
     <link rel="stylesheet" href="{{url_for('static',filename='css/round2.css')}}">
+
+    <title>Key 2</title>
 </head>
 <body>
+                                                            <!-- THIS IS ROUND 2 -->
+                                                            <!-- THIS IS ROUND 2 -->
+                                                            <!-- THIS IS ROUND 2 -->
+                                                            <!-- THIS IS ROUND 2 -->
+                                                            <!-- THIS IS ROUND 2 -->
+                                                            <!-- THIS IS ROUND 2 -->
+                                                            <!-- THIS IS ROUND 2 -->
+                                                            
 
-    
     <div id="myModal" class="modal">
         <!-- Modal content -->
         
@@ -31,56 +39,57 @@
         </div> 
     </div>
 
-        <!-- Modal content -->     
-        
+        <!-- Modal content -->      
 
-    <div class="wdiv">
-        <img  class="watch" src="{{url_for('static',filename='Images/watch.gif')}}" alt="">
-    </div>
-        
-  
-        
-    <div class="mp3" style="text-align: center; margin-top: -9em;" >
-        <audio  style="width: 10em; height: 20px; " src="{{url_for('static',filename='Images/round2.mp3')}}" controls autoplay loop>
-        </audio>
-    </div>
+    <div class="key8-img">
+    <img  src="{{url_for('static',filename='Images/key8.png')}}" alt="key8">
+</div>
+    
+<section class="key-answers">
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <ul>
 
-
-
-    <section class="ans">
-        <form action="" method="POST">
-            {{ form.hidden_tag() }}
+            {{form.r1}}
+            {{form.r2}}
+            {{form.r3}}
+            {{form.r4}}
+            {{form.r5}}
+            {{form.r6}}
+         
             
-                <label for="answer"></label>
-                {{ form.answer }}
-            
-            <input type="submit" name="enter" id="enter" value="enter">
-        </form>
-        <a id="homepage" href="unlock" >HomePage</a>
-    </section>
+        </ul>
+        <div class="enter" style="margin-top: 5em;">
+            <button  id="enter">Enter</button>
+        </div>
+    </form>
 
-    <!-- <embed src="" loop="true" autostart="true" width="2" height="0"> -->
+    <a id="homepage" href="unlock">HomePage</a>
+</section>
 
 
-        
 
+
+    
 
 
 
 <section class="next-clue" >
-    <ul class="click" style="display: none;" id="Myid">
+    <div id="Myid" style="display: none;" >
+    <ul>
         <a href="unlock">{{nextKey}}</a>
-        <a href="key3.html">NextClue</a>
+        <a href="/key3.html">NextClue</a>
     </ul>
+</div>
 </section>
 
-<script>
-     var x = document.getElementById("Myid");
-    
-    if ( "{{g.user.key2}}" == "1" ) {
-        x.style.display = "block";
-         }
 
+<script>
+    var x = document.getElementById("Myid");
+    if ( "{{g.user.key2}}" == "1" ) {
+    x.style.display = "block";
+     }
+  
 </script>
 
 
@@ -186,22 +195,60 @@
         var h1 = "{{g.user.r2h1}}";                             
         var h2 = "{{g.user.r2h2}}";
         var h3 = "{{g.user.r2h3}}";
-    
+
+
         
-        
+    var rh1 = "r2h1";
+    var rh2 = "r2h2";
+    var rh3 = "r2h3"; 
+
+    hint1.style.cursor = 'pointer';
+    hint1.style.fontWeight = 'bold';
+    hint1.style.color = 'black'
+    hint1.onmouseover = function(){ hint1.style.fontWeight = 'bolder';}
+
+    hint2.style.pointerEvents = 'none';
+    hint2.style.color = 'grey'
+    hint3.style.pointerEvents = 'none';
+    hint3.style.color = 'grey'
     
-        function checkifUsed(hintname,hintID,main_hint){
-            if("{{g.user.hint1}}"== hintname || "{{g.user.hint2}}"== hintname || "{{g.user.hint3}}"== hintname|| "{{g.user.hint4}}"== hintname|| "{{g.user.hint5}}"== hintname|| "{{g.user.hint6}}"== hintname|| "{{g.user.hint7}}"== hintname){
-                hintID.innerHTML = main_hint;
-                hintID.style.color = "red";
-                hintID.style.pointerEvents = 'none';
-            }
+    if( ("{{g.user.hint1}}"  == rh1) || "{{g.user.hint2}}" == rh1 || "{{g.user.hint3}}" == rh1 || "{{g.user.hint4}}" == rh1 || "{{g.user.hint5}}" == rh1 || "{{g.user.hint6}}" == rh1 || "{{g.user.hint7}}" == rh1){ 
+            hint2.style.pointerEvents = 'auto';
+            hint2.style.cursor = 'pointer';
+            hint2.style.fontWeight = 'bold';
+            hint2.style.color = 'black'
+            hint2.onmouseover = function(){ hint2.style.fontWeight = 'bolder';}
+
+            hint3.style.pointerEvents = 'none';
+            hint3.style.color = 'grey'
+            
         }
+    if("{{g.user.hint1}}" == rh2 || "{{g.user.hint2}}" == rh2 || "{{g.user.hint3}}" == rh2 || "{{g.user.hint4}}" == rh2 || "{{g.user.hint5}}" == rh2 || "{{g.user.hint6}}" == rh2|| "{{g.user.hint7}}" == rh2){
+            hint3.style.pointerEvents = 'auto';
+            hint3.style.cursor = 'pointer';
+            hint3.style.fontWeight = 'bold';
+            hint3.style.color = 'black'
+            hint3.onmouseover = function(){ hint3.style.fontWeight = 'bolder';}
+            }
+
+            
+    
+    
+
+    function checkifUsed(hintname,hintID,main_hint){
+        if("{{g.user.hint1}}"== hintname || "{{g.user.hint2}}"== hintname || "{{g.user.hint3}}"== hintname|| "{{g.user.hint4}}"== hintname|| "{{g.user.hint5}}"== hintname|| "{{g.user.hint6}}"== hintname|| "{{g.user.hint7}}"== hintname){
+            hintID.innerHTML = main_hint;
+            hintID.style.color = "red";
+            hintID.onmouseover = function(){ hintID.style.fontWeight = 'normal';}
+            hintID.style.pointerEvents = 'none';
+        }
+    }
+
         
         //Enter Hints database links here
         checkifUsed('r2h1', hint1,h1);
-        checkifUsed('r2h2', hint2,h2);
-        checkifUsed('r2h3', hint3,h3);
+        checkifUsed(rh2, hint2,h2);
+        checkifUsed(rh3, hint3,h3);
     
     
     
@@ -262,9 +309,9 @@
         }
         
         //Enter here too
-        hint1.onclick = function() {updateHint(hint1,hints_left,"r2h1",'/key2.html',h1,hint1,hint2,hint3);}
-        hint2.onclick = function() {updateHint(hint2,hints_left,"r2h2",'/key2.html',h2,hint1,hint2,hint3);}
-        hint3.onclick = function() {updateHint(hint3,hints_left,"r2h3",'/key2.html',h3,hint1,hint2,hint3);}
+        hint1.onclick = function() {updateHint(hint1,hints_left,rh1,'/key2.html',h1,hint1,hint2,hint3);}
+        hint2.onclick = function() {updateHint(hint2,hints_left,rh2,'/key2.html',h2,hint1,hint2,hint3);}
+        hint3.onclick = function() {updateHint(hint3,hints_left,rh3,'/key2.html',h3,hint1,hint2,hint3);}
     
     
     
@@ -281,12 +328,14 @@
             
          }  
     
-
+    
+       
+    
+       
         </script>
         
     
-    
-    
+
     
 </body>
 </html>
