--- a/static/css/scavenger.scss
+++ b/static/css/scavenger.scss
@@ -8,7 +8,7 @@ body {
     justify-items: center;
     /* margin: 0;
     padding: 10px; */
-    background-color:  #969696;
+    background-color:  #a6c5d6;
   
     
   }
@@ -46,6 +46,7 @@ body {
       /* padding-left: 50px;
       padding-right: 50px; */
   }
+ 
   a{
       padding-top: 30px;
       padding-bottom: 60px;
@@ -75,6 +76,7 @@ body {
     background-color: black;
     color: whitesmoke;
   }
+
   
 .modal {
   display: none; /* Hidden by default */
@@ -144,7 +146,7 @@ body {
 .hints{
   li{
   &:hover{
-      font-weight: normal;
+      font-weight: bolder;
       color: black;
   }
 }
